# TDR

./: CMakeLists.txt  README.md
_source/hotjson/: CMakeLists.txt  json_l.re  json_parser.c  json_y.yy
_source/hotscript/: CMakeLists.txt  hot_vm.c  hotlex.c  hotobject_reader.c  hotobject_writer.c  script_l.re  script_parser.c  script_y.yy
lua/: json  (+9 more)
source/: CMakeLists.txt  data_description_l.re  data_description_y.yy  definition.h  error.h  generator.c  generator.h  getopt.c  getopt_long.c  globals.c  globals.h  hotdata_check.c  hotdata_parser.c  hotdata_parser.h  hotdata_reduce.h  hp_config.h  hp_error_code_reader.c  hp_error_msg_reader.c  hp_error_msg_reader.h  hp_file.c  hp_getopt.c  hp_getopt_long.c  hp_mempool.c  hp_number.c  hp_python_writer.c  hp_script_lex.c  hp_script_lex.h  hp_trie.c  main.c  parser_y.yy  safe-ctype.c  scanner_l.re  symbols.c  symbols.h  syntactic_node.h  syntactic_node_writer.c  syntactic_node_writer.h  tdata_l.re  tdata_y.yy  version.h  (+7 more)
source/core/: tdr_error_code.h  tdr_hash.c  tdr_hash.h  tdr_list.h  tdr_util.h
source/datrie/: CMakeLists.txt  tail.c
source/encoding/: CMakeLists.txt  ddekit_compact_encoding_reader.c  ddekit_compact_encoding_writer.c  ddekit_json_encoding_reader.c  ddekit_json_encoding_writer.c  ddekit_xml_encoding_reader.c  ddekit_xml_encoding_writer.c  xml_reader.c  xml_writer.c
source/error/: error.c  error.h  error_code.h  error_code_reader.c  error_code_reader.h  error_code_types.h  error_msg.h  error_msg_reader.c  error_msg_reader.h  error_msg_types.h  hp_error.c  hp_error.h  hp_error_code_reader.c  hp_error_code_reader.h  hp_error_msg.h  hp_error_msg_reader.h
source/generate/: c_types.c  c_types.h  generator_cs.c  generator_cs.h  generator_reader_c.c  generator_reader_c.h  generator_reader_h.c  generator_reader_h.h  generator_sql.c  generator_sql.h  generator_types_h.c  generator_types_h.h  generator_writer_c.c  generator_writer_c.h  generator_writer_h.c  generator_writer_h.h  td_generator_cs.c  td_generator_cs.h  td_generator_reader_c.c  td_generator_reader_c.h  td_generator_reader_h.c  td_generator_reader_h.h  td_generator_sql.c  td_generator_sql.h  td_generator_types_h.c  td_generator_types_h.h  td_generator_writer_c.c  td_generator_writer_c.h  td_generator_writer_h.c  td_generator_writer_h.h  tlibc_cs.c  tlibc_cs.h  tlibc_reader.c  tlibc_reader.h  tlibc_reader_header.c  tlibc_reader_header.h  tlibc_sql.c  tlibc_sql.h  tlibc_types.c  tlibc_types.h  (+4 more)
source/getopt/: getopt.h  getopt_long.c  getopt_long.h  safe-ctype.c
source/hotdata/: CMakeLists.txt  data_description_l.re  data_description_y.yy  globals.h  hotdata_check.c  hotdata_check.h  hotdata_parser.c  hotdata_parser.h  hotdata_reduce.c  hotdata_reduce.h  hotdata_symbols.h  hp_lua_writer.c  hp_lua_writer.h  hp_python_writer.c  hp_python_writer.h  language.c  main.c  parser_node.h  syntactic_node.h  syntactic_node_writer.c  syntactic_node_writer.h  syntatic_node_writer.c  syntatic_node_writer.h
source/hotdata/datrie/: darray.c  tail.c  triedefs.h  typedefs.h
source/hotdata/language/: language.c  language.h  language_reader.c
source/hotdata/lua52/: CMakeLists.txt
source/hoterror/: CMakeLists.txt  hp_error.c  hp_error_msg_reader.c  hp_error_reader.c
source/hotlib/: CMakeLists.txt  hp_config_writer.c  hp_config_writer.h  hp_error.c  hp_error_code_reader.c  hp_error_msg_reader.c  hp_script_lex.c
source/hotpot/: hp_error.c  hp_error_msg_reader.c  hp_error_reader.c  hp_getopt.c  hp_math.c  hp_number.c  hp_reader.c  hp_writer.c
source/hotprotocol/: CMakeLists.txt  ddekit_compact_encoding_reader.c  ddekit_compact_encoding_writer.c  ddekit_json_encoding_reader.c  ddekit_json_encoding_writer.c  hp_abstract_reader.c  hp_abstract_writer.c  hp_compact_reader.c  hp_compact_writer.c  hp_json_reader.c  hp_json_writer.c  hp_lua_reader.c  hp_lua_writer.c  hp_xml_reader.c  hp_xml_writer.c  xml_reader.c  xml_writer.c
source/hotprotocol/c/: CMakeLists.txt  hp_abstract_reader.c  hp_abstract_writer.c  hp_compact_reader.c  hp_compact_writer.c  hp_lua_writer.c  hp_xml_reader.c  hp_xml_writer.c
source/hotscript/: CMakeLists.txt  hot_vm.c  hotlex.c  hp_error.c  hp_error_code_reader.c  hp_error_msg_reader.c  hp_script_lex.c  hp_script_op.c  hp_script_parser.c  hp_script_vm.c  script_l.re  script_parser.c  script_y.yy
source/hotscript/cmd/: CMakeLists.txt  json_parser.c  json_parser.h  json_y.yy  main.c
source/hotscript/compiler/: CMakeLists.txt  globals.h  hot_vm.c  hot_vm.h  hotobject.c  hotobject.h  hotscript.c  hotscript_trie.c  hs_l.ll  hs_y.yy  hstrie.c  json_l.ll  json_l.re  json_parser.c  json_parser.h  json_y.yy  main.c  script_l.ll  script_parser.c  script_parser.h  script_y.yy  xml_l.ll  xml_parser.c  xml_parser.h  xml_tree.h  xml_y.yy
source/hotscript/hotscript/: CMakeLists.txt  hot_vm.c  hotlex.c  hotobject.c  hotobject_reader.c  hotobject_writer.c  script_l.ll  script_l.re  script_parser.c  script_y.yy
source/hotscript/php/: CMakeLists.txt  hotscript.c  php_hotscript.h
source/hotscript/php_hotscript/: CMakeLists.txt  hotscript.c  php_hotscript.h
source/language/: language.c  language.h  language_reader.c  language_reader.h  language_types.h  simplified_chinese.c
source/lua/: README.md
source/parse/: check.c  check.h  hotdata_parser.c  hotdata_parser.h  hp_script_lex.c  hp_script_lex.h  parser.c  parser.h  parser_node.h  reduce.c  reduce.h  scanner.c  scanner.h
source/php_hotscript/: CMakeLists.txt  hotscript.c  php_hotscript.h
source/platform/: tdr_platform.h  tdr_platform_common.h  tdr_platform_linux.h  tdr_platform_windows.h
source/script/: c_functions.c  c_functions.h  script.c  script.h  script_functions.c  script_functions.h
tutorial/: CMakeLists.txt  Makefile  README.md  build.mk  example.c  item.xlsx  main.c  tconnd_inc.xml  tconnd_instance1.xml.inc
tutorial/hotprotocol-c/: CMakeLists.txt  main.c
tutorial/hotscript-php/: control.php  template.hs
tutorial/php/: control.php  template.hs
tutorial/protocol/: protocol.td  protocol.tdr  sql.td  sql.tdr
tutorial/tlibc_example/: Makefile
tutorial/tsf4g_example/: Makefile
(+211 files in other folders)
