SET(PNAME "TData")
project(${PNAME})

cmake_minimum_required(VERSION 2.6)

IF(WIN32)
	SET(CMAKE_C_FLAGS_DEBUG "/Od /Z7 /W4 /MDd")
	SET(CMAKE_C_FLAGS_RELEASE "/O2 /W4 /MD")
ELSE()
	SET(CMAKE_C_FLAGS_DEBUG "-g -Wall")
	SET(CMAKE_C_FLAGS_RELEASE "-O2 -Wall")
ENDIF()

SET(BUILDTYPE_DOCSTRING "Choose the type of build, options are: Debug(${CMAKE_C_FLAGS_DEBUG}) Release(${CMAKE_C_FLAGS_RELEASE})")
IF(WIN32)
	SET(CMAKE_BUILD_TYPE "Debug" CACHE STRING ${BUILDTYPE_DOCSTRING} FORCE)
ELSE()
	SET(CMAKE_BUILD_TYPE "Debug" CACHE STRING ${BUILDTYPE_DOCSTRING} FORCE)
	SET(CMAKE_INSTALL_PREFIX "/usr/local/${PNAME}" CACHE STRING "" FORCE)
ENDIF()

SET(CMAKE_MODULE_PATH "${${PNAME}_SOURCE_DIR}/cmake/Modules/;${CMAKE_MODULE_PATH}" )
set(DIR_HOME ${${PNAME}_SOURCE_DIR})
set(BUILD_HOME ${${PNAME}_BINARY_DIR})

set(INCLUDE  ${DIR_HOME}/include)
set(SOURCE  ${DIR_HOME}/source)

add_subdirectory(source)
