find_package(TLibC REQUIRED)

set(GEN_PATH ${SOURCE}/gen)
set(GEN_INCLUDE ${GEN_PATH}/include)
set(GEN_SOURCE ${GEN_PATH}/source)


FILE(GLOB FILE_LIST *.h *.c)

FILE(GLOB LANGUAGE_FILE_LIST language/*.h language/*.c)
source_group("language" FILES ${LANGUAGE_FILE_LIST})

FILE(GLOB PARSE_FILE_LIST parse/*.h parse/*.c)
source_group("parse" FILES ${PARSE_FILE_LIST})

FILE(GLOB GENERATE_FILE_LIST generate/*.h generate/*.c)
source_group("generate" FILES ${GENERATE_FILE_LIST})

FILE(GLOB_RECURSE FLEX_FILE *.re)
FILE(GLOB_RECURSE BISON_FILE *.yy)

set(RE2C_HEADER ${GEN_INCLUDE}/tdata_l.h)
set(RE2C_OUTPUTS ${GEN_SOURCE}/tdata_l.c)
if(WITH_RE2C)
	add_custom_command(OUTPUT ${RE2C_OUTPUTS} ${RE2C_HEADER}
	COMMAND re2c -c -F -t${RE2C_HEADER} -o${RE2C_OUTPUTS} ${FLEX_FILE}
	)
else()
endif(WITH_RE2C)

set(BISON_DEFINES_OUTPUTS ${GEN_INCLUDE}/tdata_y.h)
set(BISON_OUTPUTS ${GEN_SOURCE}/tdata_y.c)
if(WITH_BISON)
	add_custom_command(OUTPUT ${BISON_DEFINES_OUTPUTS} ${BISON_OUTPUTS}
		COMMAND bison -ptdata -o${BISON_OUTPUTS} ${BISON_FILE}
		COMMAND bison -ptdata --defines=${BISON_DEFINES_OUTPUTS} ${BISON_FILE}
	)
else()
endif(WITH_BISON)

INCLUDE_DIRECTORIES(
	${INCLUDE}
	${TLIBC_INCLUDE_DIR}
	${GEN_INCLUDE}
	.
	)
ADD_EXECUTABLE(${PNAME} ${FILE_LIST} ${LANGUAGE_FILE_LIST} ${PARSE_FILE_LIST} ${GENERATE_FILE_LIST} ${FLEX_FILE} ${BISON_FILE} ${RE2C_OUTPUTS} ${RE2C_HEADER} ${BISON_DEFINES_OUTPUTS} ${BISON_OUTPUTS})
SET_TARGET_PROPERTIES(${PNAME} PROPERTIES OUTPUT_NAME ${PONAME})

INSTALL(TARGETS ${PNAME} RUNTIME DESTINATION "bin")

if(WIN32)
	TARGET_LINK_LIBRARIES(${PNAME} ${TLIBC_LIBRARIES})
else()
	TARGET_LINK_LIBRARIES(${PNAME} ${TLIBC_LIBRARIES})
endif(WIN32)

