PROJECT(HotJson)

FILE(GLOB_RECURSE FILE_LIST . *.h *.c)
FILE(GLOB_RECURSE HFILE_LIST ${_INCLUDE}/hotjson/*.h)


FILE(GLOB_RECURSE JSON_FLEX_FILE json_l.re)
FILE(GLOB_RECURSE JSON_BISON_FILE json_y.yy)


set(JSON_FLEX_OUTPUTS ${_BUILD_SOURCE}/json_l.c)
set(JSON_FLEX_HEADER ${_BUILD_INCLUDE}/json_l.h)
set(JSON_BISON_DEFINES_OUTPUTS ${_BUILD_INCLUDE}/json_y.h)
set(JSON_BISON_OUTPUTS ${_BUILD_SOURCE}/json_y.c)

#linux 需要创建目录，否则Flex和Bison无法生成文件
execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory ${_BUILD_SOURCE})
execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory ${_BUILD_INCLUDE})

add_custom_command(OUTPUT ${JSON_FLEX_OUTPUTS} ${JSON_BISON_DEFINES_OUTPUTS} ${JSON_BISON_OUTPUTS} ${JSON_FLEX_HEADER}
	COMMAND re2c -c -F -t${JSON_FLEX_HEADER} -o${JSON_FLEX_OUTPUTS} ${JSON_FLEX_FILE}
	COMMAND bison -pyyjson -o${JSON_BISON_OUTPUTS} ${JSON_BISON_FILE}
	COMMAND bison -pyyjson --defines=${JSON_BISON_DEFINES_OUTPUTS} ${JSON_BISON_FILE}
)

INCLUDE_DIRECTORIES(
	.
	${INCLUDE}
	${_INCLUDE}
	${_BUILD_INCLUDE}
	)
ADD_LIBRARY(HotJson ${FILE_LIST} ${HFILE_LIST}
	${JSON_FLEX_FILE} ${JSON_BISON_FILE} ${JSON_FLEX_OUTPUTS} ${JSON_FLEX_HEADER} ${JSON_BISON_DEFINES_OUTPUTS} ${JSON_BISON_OUTPUTS})
SET_TARGET_PROPERTIES(HotJson PROPERTIES OUTPUT_NAME hs)
