PROJECT(HotScript)

FILE(GLOB_RECURSE HFILE_LIST ${_INCLUDE}/hotscript/*.h)
FILE(GLOB_RECURSE CFILE_LIST ${SOURCE}/ *.c)
FILE(GLOB_RECURSE SCRIPT_FLEX_FILE script_l.re)
FILE(GLOB_RECURSE SCRIPT_BISON_FILE script_y.yy)

set(SCRIPT_FLEX_HEADER ${_BUILD_INCLUDE}/script_l.h)
set(SCRIPT_FLEX_OUTPUTS ${_BUILD_SOURCE}/script_l.c)
set(SCRIPT_BISON_DEFINES_OUTPUTS ${_BUILD_INCLUDE}/script_y.h)
set(SCRIPT_BISON_OUTPUTS ${_BUILD_SOURCE}/script_y.c)

#linux 需要创建目录，否则Flex和Bison无法生成文件
execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory ${_BUILD_SOURCE})
execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory ${_BUILD_INCLUDE})

add_custom_command(OUTPUT ${SCRIPT_FLEX_OUTPUTS} ${SCRIPT_BISON_DEFINES_OUTPUTS} ${SCRIPT_BISON_OUTPUTS} ${SCRIPT_FLEX_HEADER}
	COMMAND re2c -c -F -t${SCRIPT_FLEX_HEADER} -o${SCRIPT_FLEX_OUTPUTS} ${SCRIPT_FLEX_FILE}
	COMMAND bison -pyyscript -o${SCRIPT_BISON_OUTPUTS} ${SCRIPT_BISON_FILE}
	COMMAND bison -pyyscript --defines=${SCRIPT_BISON_DEFINES_OUTPUTS} ${SCRIPT_BISON_FILE}
)


INCLUDE_DIRECTORIES(
	${INCLUDE}
	${_INCLUDE}
	${_BUILD_INCLUDE}
	.
	)

ADD_LIBRARY(HotScript ${HFILE_LIST} ${CFILE_LIST}
	${SCRIPT_FLEX_FILE} ${SCRIPT_BISON_FILE} ${SCRIPT_FLEX_OUTPUTS} ${SCRIPT_FLEX_HEADER} ${SCRIPT_BISON_DEFINES_OUTPUTS} ${SCRIPT_BISON_OUTPUTS}
	)
