PROJECT(Encoding)

FILE(GLOB_RECURSE HFILE_LIST ${INCLUDE}/encoding/*.h)
FILE(GLOB_RECURSE CFILE_LIST ${SOURCE}/ *.c)

INCLUDE_DIRECTORIES(
	${INCLUDE}
	)

ADD_LIBRARY(Encoding ${HFILE_LIST} ${CFILE_LIST})
SET_TARGET_PROPERTIES(Encoding PROPERTIES OUTPUT_NAME encoding)
INSTALL(TARGETS Encoding ARCHIVE DESTINATION ${LIBRARY_PATH})
