PROJECT(HotData)

FILE(GLOB_RECURSE FILE_LIST . *.h *.c)
FILE(GLOB DDGEN_HFILE_LIST ${DDGEN_PATH}/c_hotpot/*.h)
FILE(GLOB DDGEN_CFILE_LIST ${DDGEN_PATH}/c_hotpot/*.c)

FILE(GLOB_RECURSE FLEX_FILE *.re)
FILE(GLOB_RECURSE BISON_FILE *.yy)

set(FLEX_HEADER ${_BUILD_INCLUDE}/data_description_l.h)
set(FLEX_OUTPUTS ${_BUILD_SOURCE}/data_description_l.c)
set(BISON_DEFINES_OUTPUTS ${_BUILD_INCLUDE}/data_description_y.h)
set(BISON_OUTPUTS ${_BUILD_SOURCE}/data_description_y.c)

#linux 需要创建目录，否则Flex和Bison无法生成文件
execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory ${_BUILD_SOURCE})
execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory ${_BUILD_INCLUDE})

add_custom_command(OUTPUT ${FLEX_OUTPUTS} ${BISON_DEFINES_OUTPUTS} ${BISON_OUTPUTS} ${FLEX_HEADER}
	COMMAND re2c -c -F -t${FLEX_HEADER} -o${FLEX_OUTPUTS} ${FLEX_FILE}
	COMMAND bison -pyydata -o${BISON_OUTPUTS} ${BISON_FILE}
	COMMAND bison -pyydata --defines=${BISON_DEFINES_OUTPUTS} ${BISON_FILE}
)

INCLUDE_DIRECTORIES(
	${INCLUDE}
	${_INCLUDE}
	${_BUILD_INCLUDE}
	.
	)
ADD_EXECUTABLE(HotData ${FILE_LIST} ${DDGEN_FILE_LIST} ${DDGEN_HFILE_LIST} ${DDGEN_CFILE_LIST} ${FLEX_FILE} ${BISON_FILE} ${FLEX_OUTPUTS} ${FLEX_HEADER} ${BISON_DEFINES_OUTPUTS} ${BISON_OUTPUTS})
SET_TARGET_PROPERTIES(HotData PROPERTIES OUTPUT_NAME hd)

INSTALL(TARGETS HotData RUNTIME DESTINATION ${BINARY_PATH})

TARGET_LINK_LIBRARIES(HotData ${HOTPOT_LIBRARIES} HotPot HotScript HotProtocol DATrie Language HotJson)
