PROJECT(HotError)

FILE(GLOB_RECURSE HFILE_LIST ${INCLUDE}/hoterror/*.h)
FILE(GLOB_RECURSE CFILE_LIST ${SOURCE}/ *.c)

INCLUDE_DIRECTORIES(
	${INCLUDE}
	)

ADD_LIBRARY(HotError ${HFILE_LIST} ${CFILE_LIST})
SET_TARGET_PROPERTIES(HotError PROPERTIES OUTPUT_NAME hoterror)
INSTALL(TARGETS HotError ARCHIVE DESTINATION ${LIBRARY_PATH})
