PROJECT(HotLib)

FILE(GLOB_RECURSE HFILE_LIST ${INCLUDE}/hotlib/*.h)
FILE(GLOB_RECURSE CFILE_LIST ${SOURCE}/hotlib/*.c)


INCLUDE_DIRECTORIES(
	${INCLUDE}
	)

ADD_LIBRARY(HotLib ${HFILE_LIST} ${CFILE_LIST})
SET_TARGET_PROPERTIES(HotLib PROPERTIES OUTPUT_NAME hotprotocol)
INSTALL(TARGETS HotLib ARCHIVE DESTINATION ${LIBRARY_PATH})
