PROJECT(HotLib)

FILE(GLOB_RECURSE HFILE_LIST ${INCLUDE}/hotlib/*.h)
FILE(GLOB_RECURSE CFILE_LIST ${SOURCE}/hotlib/*.c)

find_package(TLibC REQUIRED)


INCLUDE_DIRECTORIES(
	${INCLUDE}
	${TLIBC_INCLUDE_DIR}
	)

ADD_LIBRARY(HotLib ${HFILE_LIST} ${CFILE_LIST} ${TLIBC_LIBRARIES})
SET_TARGET_PROPERTIES(HotLib PROPERTIES OUTPUT_NAME hotlib)
INSTALL(TARGETS HotLib ARCHIVE DESTINATION ${LIBRARY_PATH})
