PROJECT(HotProtocol)

FILE(GLOB_RECURSE HFILE_LIST ${INCLUDE}/hotprotocol/*.h)
FILE(GLOB_RECURSE CFILE_LIST ${SOURCE}/ *.c)

INCLUDE_DIRECTORIES(
	${INCLUDE}
	${_LUA_INCLUDE}
	)

ADD_LIBRARY(HotProtocol ${HFILE_LIST} ${CFILE_LIST})
SET_TARGET_PROPERTIES(HotProtocol PROPERTIES OUTPUT_NAME hotprotocol)
INSTALL(TARGETS HotProtocol ARCHIVE DESTINATION ${LIBRARY_PATH})
