PROJECT(HotProtocol)

FILE(GLOB_RECURSE HFILE_LIST ${INCLUDE}/hotprotocol/*.h)
FILE(GLOB_RECURSE CFILE_LIST ${SOURCE}/ *.c)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${DIR_HOME}/cmake/Modules/)
FIND_PACKAGE(Lua52 REQUIRED)

INCLUDE_DIRECTORIES(
	${INCLUDE}
	${LUA_INCLUDE_DIR}
	)

ADD_LIBRARY(HotProtocol ${HFILE_LIST} ${CFILE_LIST})
SET_TARGET_PROPERTIES(HotProtocol PROPERTIES OUTPUT_NAME hotprotocol)
INSTALL(TARGETS HotProtocol ARCHIVE DESTINATION ${LIBRARY_PATH})
