PROJECT(HotScriptCommand)

FILE(GLOB_RECURSE FILE_LIST . *.h *.c)

INCLUDE_DIRECTORIES(
	.
	${INCLUDE}
	${_INCLUDE}
	)
ADD_EXECUTABLE(HotScriptCommand ${FILE_LIST}) 
SET_TARGET_PROPERTIES(HotScriptCommand PROPERTIES OUTPUT_NAME hs)

INSTALL(TARGETS HotScriptCommand RUNTIME DESTINATION ${BINARY_PATH})

TARGET_LINK_LIBRARIES(HotScriptCommand HotScript DATrie HotPot HotProtocol HotJson)
