PROJECT(HotScriptCompiler)

FILE(GLOB_RECURSE HFILE_LIST ${INCLUDE}/hotscript/*.h)
FILE(GLOB_RECURSE FILE_LIST . *.h *.c)


FILE(GLOB_RECURSE XML_FLEX_FILE json_l.ll)
FILE(GLOB_RECURSE XML_BISON_FILE json_y.yy)


set(XML_FLEX_HEADER ${_BUILD_INCLUDE}/json_l.h)
set(XML_FLEX_OUTPUTS ${_BUILD_SOURCE}/json_l.c)
set(XML_BISON_DEFINES_OUTPUTS ${_BUILD_INCLUDE}/json_y.h)
set(XML_BISON_OUTPUTS ${_BUILD_SOURCE}/json_y.c)

#linux 需要创建目录，否则Flex和Bison无法生成文件
execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory ${_BUILD_SOURCE})
execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory ${_BUILD_INCLUDE})

add_custom_command(OUTPUT ${XML_FLEX_OUTPUTS} ${XML_BISON_DEFINES_OUTPUTS} ${XML_BISON_OUTPUTS} ${XML_FLEX_HEADER}
	COMMAND flex -Pyyjson -o${XML_FLEX_OUTPUTS} ${XML_FLEX_FILE}
	COMMAND flex -Pyyjson --bison-bridge --bison-locations --reentrant --nounistd --header-file=${XML_FLEX_HEADER} ${XML_FLEX_FILE}
	COMMAND bison -pyyjson -o${XML_BISON_OUTPUTS} ${XML_BISON_FILE}
	COMMAND bison -pyyjson --defines=${XML_BISON_DEFINES_OUTPUTS} ${XML_BISON_FILE}
)

INCLUDE_DIRECTORIES(
	.
	${INCLUDE}
	${_BUILD_INCLUDE}
	)
ADD_EXECUTABLE(HotScriptCompiler ${FILE_LIST} ${HFILE_LIST} 
	${XML_FLEX_FILE} ${XML_BISON_FILE} ${XML_FLEX_OUTPUTS} ${XML_FLEX_HEADER} ${XML_BISON_DEFINES_OUTPUTS} ${XML_BISON_OUTPUTS})
SET_TARGET_PROPERTIES(HotScriptCompiler PROPERTIES OUTPUT_NAME hs)

INSTALL(TARGETS HotScriptCompiler RUNTIME DESTINATION ${BINARY_PATH})

TARGET_LINK_LIBRARIES(HotScriptCompiler HotScript DATrie HotPot)
