PROJECT(HotScript)

FILE(GLOB_RECURSE HFILE_LIST ${INCLUDE}/hotscript/*.h)
FILE(GLOB_RECURSE CFILE_LIST ${SOURCE}/ *.c)

INCLUDE_DIRECTORIES(
	${INCLUDE}
	)

ADD_LIBRARY(HotScript ${HFILE_LIST} ${CFILE_LIST})
SET_TARGET_PROPERTIES(HotScript PROPERTIES OUTPUT_NAME hotscript)
INSTALL(TARGETS HotScript ARCHIVE DESTINATION ${LIBRARY_PATH})
