PROJECT(PHP_HotScript)

FILE(GLOB_RECURSE FILE_LIST *.h *.c)

INCLUDE_DIRECTORIES(
	${INCLUDE}
	$ENV{PHP-DEVEL_DIR}/include/
	$ENV{PHP-DEVEL_DIR}/include/main
	$ENV{PHP-DEVEL_DIR}/include/Zend
	$ENV{PHP-DEVEL_DIR}/include/TSRM
	)

ADD_DEFINITIONS(-DZEND_WIN32)
ADD_DEFINITIONS(-DPHP_WIN32)
ADD_DEFINITIONS(-DZEND_DEBUG=0)
ADD_DEFINITIONS(-DZTS=1)
ADD_DEFINITIONS(-DHOTSCRIPT_EXPORTS)
ADD_DEFINITIONS(-DCOMPILE_DL_HOTSCRIPT)


ADD_LIBRARY(PHP_HotScript SHARED ${FILE_LIST})
SET_TARGET_PROPERTIES(PHP_HotScript PROPERTIES OUTPUT_NAME php_hotscript)
TARGET_LINK_LIBRARIES(PHP_HotScript $ENV{PHP-DEVEL_DIR}/lib/php5ts.lib)
INSTALL(TARGETS PHP_HotScript RUNTIME DESTINATION ${BINARY_PATH})
